[package]
name = "quickersort"
version = "2.0.1"
authors = [ "Viktor Dahl <pazaconyoman@gmail.com>", "Michael Howell <michael@notriddle.com>" ]
description = """
Fast sorting compatible with stable Rust.
Also has (optional) support for efficient and robust sorting of floating point numbers."""
keywords = ["sorting", "sort", "float"]
license = "MIT / Apache-2.0"
repository = "https://github.com/notriddle/quickersort"
documentation = "https://www.notriddle.com/rustdoc/quickersort/index.html"
readme = "README.md"

[dependencies]
unreachable = "0.1"

[features]
default = [ "float" ]
float = [ "num-traits" ]

[lib]
name = "quickersort"
path = "src/lib.rs"
test = false
bench = false

[dependencies.num-traits]
version = "0.1.32"
optional = true

[dev-dependencies]
rand = "0.3.9"
itertools = "0.3.23"
time = "0.1"

[profile.test]
opt-level = 1

