[package]
name = "quickersort"
version = "3.0.0"
authors = [ "Viktor Dahl <pazaconyoman@gmail.com>", "Michael Howell <michael@notriddle.com>", "Vinzent Steinberg <Vinzent.Steinberg@gmail.com>" ]
description = """
Fast sorting compatible with stable Rust.
Also has (optional) support for efficient and robust sorting of floating point numbers."""
keywords = ["sorting", "sort", "float"]
license = "MIT / Apache-2.0"
repository = "https://github.com/notriddle/quickersort"
documentation = "https://docs.rs/quickersort/3.0.0/quickersort/"
readme = "README.md"

[lib]
name = "quickersort"
path = "src/lib.rs"
test = false
bench = false

[dependencies]
nodrop = "0.1"

[dependencies.unreachable]
version = "1"
default-features = false

[features]
unstable = []
assert_working_compare = []

[dev-dependencies]
num-traits = "0.1"
rand = "0.3.9"
itertools = "0.3.23"

[profile.test]
opt-level = 1
